# lwlogger

./: .gitignore  CMakeLists.txt  LICENSE  compile.bat  readme.md
include/lwlogger/: logger.hpp
src/: logger.cpp  logger.hpp
test/: CmakeLists.txt  test_main.cpp
test/src/: main.cpp
